# retro-arcade-game-webgpu-rust

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  justfile
pkg/: pristine_grid_webgpu.d.ts  pristine_grid_webgpu.js  pristine_grid_webgpu_bg.wasm  pristine_grid_webgpu_bg.wasm.d.ts
src/: game.rs  geometry.rs  infinite_spawner.rs  input.rs  js_bridge.rs  lib.rs  render.rs  shaders.rs  ui.rs
