[package]
name = "pristine-grid-webgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.95"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.95", features = [
  "console",
  "Document",
  "Element",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "KeyboardEvent",
  "Node",
  "Navigator",
  "PointerEvent",
  "Window",
] }
